--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "dependencies": {
         "@mantine/core": "^7.11.2",
         "@mantine/form": "^7.11.2",
-        "@mantine/hooks": "^7.11.2"
+        "@mantine/hooks": "^7.11.2",
+        "@tabler/icons-react": "^3.11.0"
     }
 }
