--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,9 @@
     "license": "MIT",
     "require": {
         "php": "^8.2",
+        "gmponos/guzzle_logger": "^2.2",
+        "guzzlehttp/guzzle": "^7.9",
+        "guzzlehttp/oauth-subscriber": "^0.6.0",
         "inertiajs/inertia-laravel": "^1.0",
         "laravel/framework": "^11.9",
         "laravel/sanctum": "^4.0",
