--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
         "@mantine/core": "^7.11.2",
         "@mantine/form": "^7.11.2",
         "@mantine/hooks": "^7.11.2",
-        "@tabler/icons-react": "^3.11.0"
+        "@tabler/icons-react": "^3.11.0",
+        "html-react-parser": "^5.1.12",
+        "recharts": "^2.12.7"
     }
 }
