Update graph axis

--- a/package.json
+++ b/package.json
@@ -31,7 +31,9 @@
         "@mantine/hooks": "^7.11.2",
         "@mantine/modals": "^7.11.2",
         "@tabler/icons-react": "^3.11.0",
+        "@types/lodash": "^4.17.7",
         "html-react-parser": "^5.1.12",
+        "lodash": "^4.17.21",
         "recharts": "^2.12.7"
     }
 }
