Add envs related to Bricklink to .env.example

--- a/.env.example
+++ b/.env.example
@@ -62,3 +62,10 @@ AWS_BUCKET=
 AWS_USE_PATH_STYLE_ENDPOINT=false
 
 VITE_APP_NAME="${APP_NAME}"
+
+# Bricklink
+BRICKLINK_BASE_URI=https://api.bricklink.com/api/store/v1/
+BRICKLINK_CONSUMER_KEY=
+BRICKLINK_CONSUMER_SECRET=
+BRICKLINK_TOKEN=
+BRICKLINK_TOKEN_SECRET=
