--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
         "@mantine/modals": "^7.11.2",
         "@tabler/icons-react": "^3.11.0",
         "@types/lodash": "^4.17.7",
+        "bignumber.js": "^9.1.2",
         "html-react-parser": "^5.1.12",
         "lodash": "^4.17.21",
         "recharts": "^2.12.7"
