--- a/package.json
+++ b/package.json
@@ -26,6 +26,10 @@
         "vite": "^5.0"
     },
     "dependencies": {
+        "@dnd-kit/core": "^6.1.0",
+        "@dnd-kit/modifiers": "^7.0.0",
+        "@dnd-kit/sortable": "^8.0.0",
+        "@dnd-kit/utilities": "^3.2.2",
         "@mantine/core": "^7.11.2",
         "@mantine/form": "^7.11.2",
         "@mantine/hooks": "^7.11.2",
